<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colored_2"
    android:padding="10dp"
    android:id="@+id/lytscanner">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center|top"
        android:text="@string/str_tv_scan"
        android:id="@+id/tvScan"
        android:layout_margin="20dp"
       android:textSize="30sp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/str_btn_scan"

        android:id="@+id/btnScan"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_ise"
        android:id="@+id/tvLog" />

</LinearLayout>